--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,65 +4,65 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --background: #ffffff;
+    --foreground: #0a0a0a;
 
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
+    --card: #ffffff;
+    --card-foreground: #0a0a0a;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
+    --popover: #ffffff;
+    --popover-foreground: #0a0a0a;
 
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary: #161616;
+    --primary-foreground: #fafafa;
 
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
+    --secondary: #f6f6f6;
+    --secondary-foreground: #161616;
 
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
+    --muted: #f6f6f6;
+    --muted-foreground: #737373;
 
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --accent: #f6f6f6;
+    --accent-foreground: #161616;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive: #a62c4e;
+    --destructive-foreground: #fafafa;
 
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
+    --border: #e6e6e6;
+    --input: #e6e6e6;
+    --ring: #0a0a0a;
 
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
+    --background: #404040;
+    --foreground: #fafafa;
 
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
+    --card: #0a0a0a;
+    --card-foreground: #fafafa;
 
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
+    --popover: #0a0a0a;
+    --popover-foreground: #fafafa;
 
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
+    --primary: #fafafa;
+    --primary-foreground: #161616;
 
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
+    --secondary: #262626;
+    --secondary-foreground: #fafafa;
 
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
+    --muted: #262626;
+    --muted-foreground: #a6a6a6;
 
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
+    --accent: #262626;
+    --accent-foreground: #fafafa;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive: #a62c4e;
+    --destructive-foreground: #fafafa;
 
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
+    --border: #7d7d7d;
+    --input: #7d7d7d;
+    --ring: #d4d4d4;
   }
 }
 
