--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,72 +4,15 @@
 
 @layer base {
   :root {
-    --background: #ffffff;
-    --foreground: #0a0a0a;
+    --background: #343541;
+    --foreground: #ececf1;
 
-    --card: #ffffff;
-    --card-foreground: #0a0a0a;
-
-    --popover: #ffffff;
-    --popover-foreground: #0a0a0a;
-
-    --primary: #161616;
-    --primary-foreground: #fafafa;
-
-    --secondary: #f6f6f6;
-    --secondary-foreground: #161616;
-
-    --muted: #f6f6f6;
-    --muted-foreground: #737373;
-
-    --accent: #f6f6f6;
-    --accent-foreground: #161616;
-
-    --destructive: #a62c4e;
-    --destructive-foreground: #fafafa;
-
-    --border: #e6e6e6;
-    --input: #e6e6e6;
-    --ring: #0a0a0a;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: #404040;
-    --foreground: #fafafa;
-
-    --card: #0a0a0a;
-    --card-foreground: #fafafa;
-
-    --popover: #0a0a0a;
-    --popover-foreground: #fafafa;
-
-    --primary: #fafafa;
-    --primary-foreground: #161616;
-
-    --secondary: #262626;
-    --secondary-foreground: #fafafa;
-
-    --muted: #262626;
-    --muted-foreground: #a6a6a6;
-
-    --accent: #262626;
+    --accent: #202123;
     --accent-foreground: #fafafa;
-
-    --destructive: #a62c4e;
-    --destructive-foreground: #fafafa;
-
-    --border: #7d7d7d;
-    --input: #7d7d7d;
-    --ring: #d4d4d4;
   }
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
   body {
     @apply bg-background text-foreground;
   }
